# py-benzinga-api

./: pyproject.toml
.github/workflows/: test-package.yaml
docs/: rtd_requirements.txt
docs/source/: conf.py  index.md  index.rst
docs/source/notebooks/: usage.ipynb
src/py_benzinga_api/: calc.py
tests/test_calc/: test_square.py
