[tool.poetry]
name = "py-benzinga-api"
version = "0.1.0"
description = ""
authors = ["TexasCoding <jeff10278@me.com>"]
readme = "README.md"
packages = [{include = "py_benzinga_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
